--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
           <div class="two-columns">
             <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
             <div class="two-columns__main-text">
-              <p class="two-columns_paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-              <p class="two-columns_paragraph"><span class="two-columns_span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-              <p class="two-columns_paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+              <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+              <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+              <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
             </div>
           </div>
         </section>
@@ -82,45 +82,45 @@
           <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
           <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
           <ul class=" table table_theme_dark">
-            <li class="table__cell__theme_dark">
+            <li class="table__cell table__cell_theme_dark">
               <h3 class="table__heading table__heading_theme_dark">1</h3>
               <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
             </li>
-            <li class="table__cell__theme_dark">
-              <h3 class="table__heading_theme_dark">2</h3>
-              <p class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">2</h3>
+              <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
             </li>
-            <li class="table__cell__theme_dark">
-              <h3 class="table__heading_theme_dark">3</h3>
-              <p class="table__text_theme_dark">Определите целевой уровень мастерства.</p>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">3</h3>
+              <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
             </li>
-            <li class="table__cell__theme_dark">
-              <h3 class="table__heading_theme_dark">4</h3>
-              <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">4</h3>
+              <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
             </li>
-            <li class="table__cell__theme_dark">
-              <h3 class="table__heading_theme_dark">5</h3>
-              <p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">5</h3>
+              <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
             </li>
-            <li class="table__cell__theme_dark">
-              <h3 class="table__heading_theme_dark">6</h3>
-              <p class="table__text_theme_dark">Устраните препятствия для занятий.</p>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">6</h3>
+              <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
             </li>
-            <li class="table__cell__theme_dark">
-              <h3 class="table__heading_theme_dark">7</h3>
-              <p class="table__text_theme_dark">Выделите специальное время для занятий.</p>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">7</h3>
+              <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
             </li>
-            <li class="table__cell__theme_dark">
-              <h3 class="table__heading_theme_dark">8</h3>
-              <p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">8</h3>
+              <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
             </li>
-            <li class="table__cell__theme_dark">
-              <h3 class="table__heading_theme_dark">9</h3>
-              <p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">9</h3>
+              <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
             </li>
-            <li class="table__cell__theme_dark">
-              <h3 class="table__heading_theme_dark">10</h3>
-              <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+            <li class="table__cell table__cell_theme_dark">
+              <h3 class="table__heading table__heading_theme_dark">10</h3>
+              <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
             </li>
           </ul>
           <div class="kaufman__triangle"></div>
@@ -134,20 +134,20 @@
           </div>
           <nav class="footer__column footer__column_content_info">
             <h4 class="footer__column-heading">О практикуме</h4>
-            <ul class="footer__columnn-links">
-              <li><a href="#" class="footer__columnn-link">Главная</a></li>
-              <li><a href="#" class="footer__columnn-link">Концепция</a></li>
-              <li><a href="#" class="footer__columnn-link">Наставники</a></li>
+            <ul class="footer__column-links">
+              <li><a href="#" class="footer__column-link">Главная</a></li>
+              <li><a href="#" class="footer__column-link">Концепция</a></li>
+              <li><a href="#" class="footer__column-link">Наставники</a></li>
             </ul>
           </nav>
           <nav class="footer__column footer__column_content_social">
             <h4 class="footer__column-heading">Соцсети</h4>
-            <ul class="footer__columnn-links">
-              <li><a href="#" class="footer__columnn-link">
+            <ul class="footer__column-links">
+              <li><a href="#" class="footer__column-link">
                 <img class="footer__social-icon" src="./images/youtube-icon.svg" alt="Ютуб">YouTube</a></li>
-              <li><a href="#" class="footer__columnn-link">
+              <li><a href="#" class="footer__column-link">
                 <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте">ВКонтакте</a></li>
-              <li><a href="#" class="footer__columnn-link">
+              <li><a href="#" class="footer__column-link">
                 <img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="ТикТок">TikTok</a></li>
             </ul>
           </nav>
