--- a/index.html
+++ b/index.html
@@ -32,18 +32,46 @@
             </div>
           </div>
         </section>
-        <section class="techniques">
+        <section class="techniques"><!----Новая секция---->
           <h2 class="section-title">Цифры и факты</h2>
           <p class="section-subtitle">Про учёбу и мозг</p>
-          <!-----------------Новая секция-------------------->
+          <div class="cards">
+            <div class="cards__item">
+              <img class="cards__image">
+              <h3 class="cards__title"></h3>
+              <p class="cards__description"></p>
+            </div>
+            <div class="cards__item">
+              <img class="cards__image">
+              <h3 class="cards__title"></h3>
+              <p class="cards__description"></p>
+            </div>
+            <div class="cards__item">
+              <img class="cards__image">
+              <h3 class="cards__title"></h3>
+              <p class="cards__description"></p>
+            </div>
+            <div class="cards__item">
+              <img class="cards__image">
+              <h3 class="cards__title"></h3>
+              <p class="cards__description"></p>
+            </div>
+            <div class="cards__item">
+              <img class="cards__image">
+              <h3 class="cards__title"></h3>
+              <p class="cards__description"></p>
+            </div>
+          </div>
         </section>
-        <section class="video">
+        <section class="video"><!----Новая секция---->
           <h2 class="section-title">Цифры и факты</h2>
           <p class="section-subtitle">Про учёбу и мозг</p>
-          <!-----------------Новая секция-------------------->
+          <div class="video__iframes">
+            <video class="video__iframe"></video>
+            <video class="video__iframe"></video>
+          </div>
         </section>
-        <section class="oakley">
-          <!-----------------Новая секция-------------------->
+        <section class="oakley"><!----Новая секция---->
           <div class="two-columns">
             <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
             <div class="two-columns__main-text">
@@ -99,8 +127,20 @@
             </li>
           </ul>
         </section>
-        <section class="khan">
-          <!-----------------Новая секция-------------------->
+        <section class="khan"><!----Новая секция---->
+          <div class="khan__container">
+            <p class="khan__author">Салман Хан</p>
+            <h2 class="khan__title">Весь мир - школа</h2>
+            <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов
+              студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием —
+              так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+              <h3 class="khan__quote-author">Джордж Лукас</h3>
+              <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
+              <div class="khan__book-container">
+                <img class="khan__ book-pic">
+                <p class="khan__buy-lin">Купить книгу СТРЕЛКА</p>
+              </div>
+          </div>
         </section>
         <section class="kaufman">
           <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
@@ -149,10 +189,15 @@
           </ul>
           <div class="kaufman__triangle"></div>
         </section>
-        <section class="resources">
-          <h2 class="section-title">Цифры и факты</h2>
-          <p class="section-subtitle">Про учёбу и мозг</p>
-          <!-----------------Новая секция-------------------->
+        <section class="resources"><!----Новая секция---->
+          <h2 class="section-title">Полезные ресурсы</h2>
+          <p class="section-subtitle">Больше материалов о техниках и лайфхаках обчения</p>
+          <div class="resources__logo-zone">
+            <a href="#" class="resources__link"><img class="resources__logo" src="_" alt="_">Логотип #1</a>
+            <a href="#" class="resources__link"><img class="resources__logo" src="_" alt="_">Логотип #2</a>
+            <a href="#" class="resources__link"><img class="resources__logo" src="_" alt="_">Логотип #3</a>
+            <a href="#" class="resources__link"><img class="resources__logo" src="_" alt="_">Логотип #4</a>
+          </div>
         </section>
       </main>
       <footer class="footer">
