Дописал разметку, создал контейнеры для правил стилей

--- a/index.html
+++ b/index.html
@@ -33,39 +33,39 @@
           </div>
         </section>
         <section class="techniques"><!----Новая секция---->
-          <h2 class="section-title">Цифры и факты</h2>
-          <p class="section-subtitle">Про учёбу и мозг</p>
+          <h2 class="section-title">Техники обучения</h2>
+          <p class="section-subtitle">Пять практик от Барбары Оакли</p>
           <div class="cards">
             <div class="cards__item">
-              <img class="cards__image">
-              <h3 class="cards__title"></h3>
-              <p class="cards__description"></p>
+              <img class="cards__image" src="./images/cards-attention.png" alt="_"> <!-- Сделать фоном через ДИВ, чтобы не прописывать АЛЬТ-->
+              <h3 class="cards__title">Два вида внимания</h3>
+              <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
             </div>
             <div class="cards__item">
-              <img class="cards__image">
-              <h3 class="cards__title"></h3>
-              <p class="cards__description"></p>
+              <img class="cards__image" src="./images/cards-recall.png" alt="_"> <!-- Сделать фоном через ДИВ, чтобы не прописывать АЛЬТ-->
+              <h3 class="cards__title">Recall</h3>
+              <p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</p>
             </div>
             <div class="cards__item">
-              <img class="cards__image">
-              <h3 class="cards__title"></h3>
-              <p class="cards__description"></p>
+              <img class="cards__image" src="./images/cards-interliving.png" alt="_"> <!-- Сделать фоном через ДИВ, чтобы не прописывать АЛЬТ-->
+              <h3 class="cards__title">Интерливинг</h3>
+              <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
             </div>
             <div class="cards__item">
-              <img class="cards__image">
-              <h3 class="cards__title"></h3>
-              <p class="cards__description"></p>
+              <img class="cards__image" src="./images/cards-question.png" alt="_"> <!-- Сделать фоном через ДИВ, чтобы не прописывать АЛЬТ-->
+              <h3 class="cards__title">Вопросы</h3>
+              <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
             </div>
             <div class="cards__item">
-              <img class="cards__image">
-              <h3 class="cards__title"></h3>
-              <p class="cards__description"></p>
+              <img class="cards__image" src="./images/cards-competence.png" alt="_"> <!-- Сделать фоном через ДИВ, чтобы не прописывать АЛЬТ-->
+              <h3 class="cards__title">Иллюзия компетентности</h3>
+              <p class="cards__description">Повторите для себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
             </div>
           </div>
         </section>
         <section class="video"><!----Новая секция---->
-          <h2 class="section-title">Цифры и факты</h2>
-          <p class="section-subtitle">Про учёбу и мозг</p>
+          <h2 class="section-title">Видео на TED</h2>
+          <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
           <div class="video__iframes">
             <video class="video__iframe"></video>
             <video class="video__iframe"></video>
@@ -73,11 +73,15 @@
         </section>
         <section class="oakley"><!----Новая секция---->
           <div class="two-columns">
-            <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+            <h2 class="two-columns__brief">История Барбары Оакли.</h2>
             <div class="two-columns__main-text">
-              <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-              <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-              <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+              <p class="two-columns__paragraph">С детства Барбаре не давалась математика.
+                Она считала себя законченным гуманитарием, причём далеко не самым умным.
+                В армии она изучала русский язык, чтобы получить надбавку, да так успешно,
+                что её выдвинули в командиры. Но для продвижения по службе нужно было
+                сдавать математику. И тогда Барбара придумала свой подход к точным наукам.
+                Оказалось, если вам что-то «плохо даётся», ваши добытые трудом знания гораздо
+                глубже, чем у тех, кому всё ясно с первого взгляда.</p>
             </div>
           </div>
         </section>
@@ -137,8 +141,8 @@
               <h3 class="khan__quote-author">Джордж Лукас</h3>
               <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
               <div class="khan__book-container">
-                <img class="khan__ book-pic">
-                <p class="khan__buy-lin">Купить книгу СТРЕЛКА</p>
+                <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Картинка - Весь мир школа">
+                <p class="khan__buy-link">Купить книгу СТРЕЛКА</p>
               </div>
           </div>
         </section>
@@ -193,10 +197,10 @@
           <h2 class="section-title">Полезные ресурсы</h2>
           <p class="section-subtitle">Больше материалов о техниках и лайфхаках обчения</p>
           <div class="resources__logo-zone">
-            <a href="#" class="resources__link"><img class="resources__logo" src="_" alt="_">Логотип #1</a>
-            <a href="#" class="resources__link"><img class="resources__logo" src="_" alt="_">Логотип #2</a>
-            <a href="#" class="resources__link"><img class="resources__logo" src="_" alt="_">Логотип #3</a>
-            <a href="#" class="resources__link"><img class="resources__logo" src="_" alt="_">Логотип #4</a>
+            <a href="#" class="resources__link"><img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Логотип Арзамас"></a>
+            <a href="#" class="resources__link"><img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Логотип Н+1"></a>
+            <a href="#" class="resources__link"><img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Логотип Стрелка"></a>
+            <a href="#" class="resources__link"><img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Логотип Полка"></a>
           </div>
         </section>
       </main>
