--- a/index.html
+++ b/index.html
@@ -37,27 +37,27 @@
           <p class="section-subtitle">Пять практик от Барбары Оакли</p>
           <div class="cards">
             <div class="cards__item">
-              <img class="cards__image" src="./images/cards-attention.png" alt="_"> <!-- Сделать фоном через ДИВ, чтобы не прописывать АЛЬТ-->
+              <img class="cards__image" src="./images/cards-attention.png" alt="Карточка - Два вида внимания">
               <h3 class="cards__title">Два вида внимания</h3>
-              <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+              <p class="cards__description">Глубокие знания <br/>возникают, если <br/>чередовать сфокусированное и рассеянное мышление.</p>
             </div>
             <div class="cards__item">
-              <img class="cards__image" src="./images/cards-recall.png" alt="_"> <!-- Сделать фоном через ДИВ, чтобы не прописывать АЛЬТ-->
+              <img class="cards__image" src="./images/cards-recall.png" alt="Карточка - Рекалл">
               <h3 class="cards__title">Recall</h3>
               <p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</p>
             </div>
             <div class="cards__item">
-              <img class="cards__image" src="./images/cards-interliving.png" alt="_"> <!-- Сделать фоном через ДИВ, чтобы не прописывать АЛЬТ-->
+              <img class="cards__image" src="./images/cards-interliving.png" alt="Карточка - Интерливинг">
               <h3 class="cards__title">Интерливинг</h3>
-              <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+              <p class="cards__description">Изучайте несколько навыков одновременно,<br/> они обогащают друг друга.</p>
             </div>
             <div class="cards__item">
-              <img class="cards__image" src="./images/cards-question.png" alt="_"> <!-- Сделать фоном через ДИВ, чтобы не прописывать АЛЬТ-->
+              <img class="cards__image" src="./images/cards-question.png" alt="Карточка - Вопросы">
               <h3 class="cards__title">Вопросы</h3>
               <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
             </div>
             <div class="cards__item">
-              <img class="cards__image" src="./images/cards-competence.png" alt="_"> <!-- Сделать фоном через ДИВ, чтобы не прописывать АЛЬТ-->
+              <img class="cards__image" src="./images/cards-competence.png" alt="Карточка - Иллюзия компетентности">
               <h3 class="cards__title">Иллюзия компетентности</h3>
               <p class="cards__description">Повторите для себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
             </div>
@@ -67,8 +67,8 @@
           <h2 class="section-title">Видео на TED</h2>
           <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
           <div class="video__iframes">
-            <video class="video__iframe"></video>
-            <video class="video__iframe"></video>
+            <iframe class="video__iframe" width="571" height="321" src="https://www.youtube.com/embed/5MgBikgcWnY" title="The first 20 hours -- how to learn anything | Josh Kaufman | TEDxCSU" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="video__iframe" width="571" height="321" src="https://www.youtube.com/embed/arj7oStGLkU" title="Tim Urban: Inside the mind of a master procrastinator | TED" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </section>
         <section class="oakley"><!----Новая секция---->
@@ -134,15 +134,15 @@
         <section class="khan"><!----Новая секция---->
           <div class="khan__container">
             <p class="khan__author">Салман Хан</p>
-            <h2 class="khan__title">Весь мир - школа</h2>
+            <h2 class="khan__title">Весь мир — школа</h2>
             <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов
               студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием —
-              так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+              так<br/> учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
               <h3 class="khan__quote-author">Джордж Лукас</h3>
               <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
               <div class="khan__book-container">
                 <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Картинка - Весь мир школа">
-                <p class="khan__buy-link">Купить книгу СТРЕЛКА</p>
+                <p class="khan__buy-link">Купить книгу &rarr;</p>
               </div>
           </div>
         </section>
