Основа готова, нужно разбросать по Нестед

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Логотип Яндекс">
         <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-          <a class="header__link">Узнать &rarr;</a>
+          <a class="header__link" href="#">Узнать &rarr;</a>
         </p>
         <img class="header__main-illustration" src="./images/header-image.png" alt="Грустный мальчик">
         <div class="header__square-pic rotation"></div>
@@ -88,7 +88,7 @@
         <section class="feynman">
           <h2 class="feynman__title">Метод Фейнмана</h2>
           <p class="feynman__subtitle">Выучить и не забыть.</p>
-          <a class="feynman__link">Подробнее &rarr;</a>
+          <a class="feynman__link" href="#">Подробнее &rarr;</a>
           <img class="feynman__pic" src="./images/feynman.png" alt="Фейнман фото">
         </section>
         <section class="digits">
@@ -142,7 +142,7 @@
               <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
               <div class="khan__book-container">
                 <img class="khan__book-pic" src="./images/khan-book.jpg" alt="Картинка - Весь мир школа">
-                <p class="khan__buy-link">Купить книгу &rarr;</p>
+                <a class="khan__buy-link" href="#">Купить книгу &rarr;</a>
               </div>
           </div>
         </section>
@@ -191,7 +191,7 @@
               <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
             </li>
           </ul>
-          <div class="kaufman__triangle"></div>
+          <div class="kaufman__triangle rotation"></div>
         </section>
         <section class="resources"><!----Новая секция---->
           <h2 class="section-title">Полезные ресурсы</h2>
