--- a/pages/index.html
+++ b/pages/index.html
@@ -32,7 +32,7 @@
             </div>
           </div>
         </section>
-        <section class="techniques"><!----Новая секция---->
+        <section class="techniques">
           <h2 class="section-title">Техники обучения</h2>
           <p class="section-subtitle">Пять практик от Барбары Оакли</p>
           <div class="cards">
@@ -63,7 +63,7 @@
             </div>
           </div>
         </section>
-        <section class="video"><!----Новая секция---->
+        <section class="video">
           <h2 class="section-title">Видео на TED</h2>
           <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
           <div class="video__iframes">
@@ -71,7 +71,7 @@
             <iframe class="video__iframe" width="571" height="321" src="https://www.youtube.com/embed/arj7oStGLkU" title="Tim Urban: Inside the mind of a master procrastinator | TED" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </section>
-        <section class="oakley"><!----Новая секция---->
+        <section class="oakley">
           <div class="two-columns">
             <h2 class="two-columns__brief">История Барбары Оакли.</h2>
             <div class="two-columns__main-text">
@@ -131,7 +131,7 @@
             </li>
           </ul>
         </section>
-        <section class="khan"><!----Новая секция---->
+        <section class="khan">
           <div class="khan__container">
             <p class="khan__author">Салман Хан</p>
             <h2 class="khan__title">Весь мир — школа</h2>
@@ -193,7 +193,7 @@
           </ul>
           <div class="kaufman__triangle rotation"></div>
         </section>
-        <section class="resources"><!----Новая секция---->
+        <section class="resources">
           <h2 class="section-title">Полезные ресурсы</h2>
           <p class="section-subtitle">Больше материалов о техниках и лайфхаках обчения</p>
           <div class="resources__logo-zone">
