--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Проектная работа №1 на Яндекс.Практикуме">
+    <meta name="description" content="Проектная работа Яндекс.Практикум">
     <meta name="keywords" content="Проект, Практика, Яндекс.Практикум">
     <meta name="author" content="Андрей Кизилов">
-    <link rel="stylesheet" href="./styles/normalize.css">
-    <link rel="stylesheet" href="./styles/style.css">
+    <link rel="stylesheet" href="./pages/index.css">
     <title>Научиться учиться</title>
   </head>
   <body>
@@ -35,33 +34,33 @@
         <section class="techniques">
           <h2 class="section-title">Техники обучения</h2>
           <p class="section-subtitle">Пять практик от Барбары Оакли</p>
-          <div class="cards">
-            <div class="cards__item">
+          <ul class="cards">
+            <li class="cards__item">
               <img class="cards__image" src="./images/cards-attention.png" alt="Карточка - Два вида внимания">
               <h3 class="cards__title">Два вида внимания</h3>
-              <p class="cards__description">Глубокие знания <br/>возникают, если <br/>чередовать сфокусированное и рассеянное мышление.</p>
-            </div>
-            <div class="cards__item">
+              <p class="cards__description">Глубокие знания возникают, если чередовать сфокусированное и рассеянное мышление.</p>
+            </li>
+            <li class="cards__item">
               <img class="cards__image" src="./images/cards-recall.png" alt="Карточка - Рекалл">
               <h3 class="cards__title">Recall</h3>
               <p class="cards__description">Вспоминайте изученное - это позволит соединить разрозненные порции памяти.</p>
-            </div>
-            <div class="cards__item">
+            </li>
+            <li class="cards__item">
               <img class="cards__image" src="./images/cards-interliving.png" alt="Карточка - Интерливинг">
               <h3 class="cards__title">Интерливинг</h3>
-              <p class="cards__description">Изучайте несколько навыков одновременно,<br/> они обогащают друг друга.</p>
-            </div>
-            <div class="cards__item">
+              <p class="cards__description">Изучайте несколько навыков одновременно, они обогащают друг друга.</p>
+            </li>
+            <li class="cards__item">
               <img class="cards__image" src="./images/cards-question.png" alt="Карточка - Вопросы">
               <h3 class="cards__title">Вопросы</h3>
               <p class="cards__description">Слушая преподавателя, придумывайте хороший вопрос, который вас действительно волнует.</p>
-            </div>
-            <div class="cards__item">
+            </li>
+            <li class="cards__item">
               <img class="cards__image" src="./images/cards-competence.png" alt="Карточка - Иллюзия компетентности">
               <h3 class="cards__title">Иллюзия компетентности</h3>
               <p class="cards__description">Повторите для себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
-            </div>
-          </div>
+            </li>
+          </ul>
         </section>
         <section class="video">
           <h2 class="section-title">Видео на TED</h2>
