--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <h2 class="khan__title">Весь мир — школа</h2>
             <p class="khan__quote">Страсть и новаторство Сала Хана меняют процесс обучения миллионов
               студентов по всему миру. Книгу «Весь мир — школа» нужно прочитать всем, кто занимается образованием —
-              так<br/> учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
+              так учащиеся повсюду смогут получить навыки и знания, которые приносят успех в школе, карьере и жизни.</p>
               <h3 class="khan__quote-author">Джордж Лукас</h3>
               <p class="khan__quote-author-subline">Кинорежиссер, продюсер</p>
               <div class="khan__book-container">
